--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,3 @@
-# If you prefer the allow list template instead of the deny list, see community template:
-# https://github.com/github/gitignore/blob/main/community/Golang/Go.AllowList.gitignore
 #
 # Binaries for programs and plugins
 *.exe
@@ -23,3 +21,38 @@ go.work.sum
 
 # env file
 .env
+
+#config files
+config.yaml
+users.json
+proxies.json
+
+#old and backup files
+*.bak
+*.old
+*.b
+*.orig
+*.swp
+
+# IDE files
+.idea/ 
+*.sublime-project
+*.sublime-workspace
+*.sublime-settings
+*.sublime-metadata
+# Visual Studio Code files
+.vscode/
+# JetBrains IDE files
+*.iml
+# Eclipse files
+.project
+.classpath
+
+# MacOS files
+.DS_Store
+# Windows files
+Thumbs.db
+# Log files
+*.log
+# Temporary files
+*.tmp
