--- a/example/config.example.yml
+++ b/example/config.example.yml
@@ -6,31 +6,31 @@
 # =====================================
 server:
   # Port for the SOCKS5 proxy server to listen on
-  # Example: ":1080"
-  socks_port: ":1080"
+  # Format: "[host]:port" or ":port" or "port"
+  # Examples:
+  #   ":1080"          # Listen on all interfaces, port 1080
+  #   "127.0.0.1:1080"  # Listen only on localhost
+  #   "1080"            # Shorthand for ":1080"
+  socks_port: ':1080'
 
-  # Port for the administrative HTTP server
-  # Exposes:
-  #   - /metrics (for Prometheus)
-  #   - /reload-proxies (API for reloading proxies.json)
-  #   - /reload-users (API for reloading users.json)
-  # Example: ":8081"
-  admin_port: ":8081"
+  # Port for the Prometheus metrics server
+  # Set to empty string "" to disable
+  # Example: ":9091"
+  prometheus_port: ':9091'
 
 # =====================================
 # Logging Configuration
 # =====================================
 logging:
   # Directory where log files will be created
-  directory: "logs"
+  directory: 'logs'
 
   # Filename for SOCKS5 access logs
-  access_log_file: "access.log"
+  access_log_file: 'access.log'
 
   # Filename for application error and informational logs
-  error_log_file: "error.log"
+  error_log_file: 'error.log'
 
-  # --- Log rotation parameters (via lumberjack) ---
   # Maximum size in megabytes of a log file before it gets rotated
   log_max_size_mb: 100
 
@@ -44,12 +44,12 @@ logging:
   log_compress: true
 
 # =====================================
-# Upstream Proxies Pool Configuration
+# Upstream Proxies Configuration
 # =====================================
 proxies:
   # Path to the JSON file containing the list of upstream SOCKS5 proxies
   # Example: "proxies.json"
-  config_file_path: "proxies.json"
+  config_file_path: 'proxies.json'
 
   # Interval in seconds between health checks for each upstream proxy
   check_interval_seconds: 60
@@ -59,26 +59,25 @@ proxies:
 
   # Target host and port for health checks (should be a reliable HTTPS endpoint)
   # Example: "www.google.com:443" or "cloudflare.com:443"
-  health_check_target: "www.google.com:443"
+  health_check_target: 'www.google.com:443'
 
 # =====================================
-# SOCKS5 User Configuration
+# User Configuration
 # =====================================
 users:
   # Path to the JSON file containing the list of SOCKS5 users
   # Example: "users.json"
-  config_file_path: "users.json"
+  config_file_path: 'users.json'
 
   # Default behavior when a user has no 'allowed_proxy_tags' specified:
   # "deny": Deny access to any upstream proxy.
   # "allow_default_tag_only": Allow access only to proxies tagged with 'default_proxy_tag'.
   # "allow_all_active": Allow access to any active upstream proxy (tags are ignored for this user).
-  default_behavior_no_tags: "allow_default_tag_only"
+  default_behavior_no_tags: 'allow_default_tag_only'
 
   # The specific tag to use when 'default_behavior_no_tags' is "allow_default_tag_only".
   # This tag must exist on some of your upstream proxies.
-  # Example: "general"
-  default_proxy_tag: "general"
+  default_proxy_tag: 'general'
 
 # =====================================
 # Webhook Notifications (Optional)
@@ -87,17 +86,10 @@ webhook:
   # URL to POST notifications to if all upstream proxies go down or recover.
   # Leave empty to disable webhook notifications.
   # Example: "https://hooks.slack.com/services/YOUR/SLACK/WEBHOOK_URL"
-  url: ""
+  url: ''
 
   # Timeout in seconds for sending a webhook notification
   post_timeout_seconds: 10
-
-# =====================================
-# Admin API Security
-# =====================================
-# Secret token required in the X-Reload-Token header for API reload endpoints.
-# !!! IMPORTANT: CHANGE THIS TO A STRONG, UNIQUE, AND SECRET TOKEN !!!
-admin_api_reload_token: "changeme_to_a_strong_secret_token"
 
 # =====================================
 # Debugging
